--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="buttons">
                 <button onclick="scrollToSection('sobre')" class="primary-btn">Conheça-me</button>
                 <button onclick="scrollToSection('contato')" class="secondary-btn">Entrar em Contato</button>
-                <a href="img/CURRICULO  - RAYANNE DA MOTTA ERNANDEZ.pdf" download class="download-btn">📄 Baixar Currículo</a>
+                <a href="img/Curriculo - Rayanne da Motta Ernandez.pdf" download class="download-btn">📄 Baixar Currículo</a>
             </div>
           </div>
           
